Update dependencies, bump version to Java 21, add sonar configs