@@ -5,7 +5,6 @@ import io.aldwindelgado.ingredient.api.exchange.IngredientResponseDto;
 import io.aldwindelgado.ingredient.service.datasource.Ingredient;
 import io.aldwindelgado.product.service.datasource.Product;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.apache.commons.text.StringEscapeUtils;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
@@ -23,11 +22,11 @@ public interface IngredientMapper {
     @Named("productConverter")
     static List<String> extractProductName(List<Product> products) {
         return products.stream().map(product -> StringEscapeUtils.unescapeJava(product.getName()))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     default List<IngredientResponseDto> toResponseDtos(List<Ingredient> ingredients) {
-        return ingredients.stream().map(this::toResponseDto).collect(Collectors.toList());
+        return ingredients.stream().map(this::toResponseDto).toList();
     }
 
     @Mapping(target = "products", ignore = true)
