@@ -5,7 +5,6 @@ import io.aldwindelgado.sourcingvalue.api.exchange.SourcingValueRequestDto;
 import io.aldwindelgado.sourcingvalue.api.exchange.SourcingValueResponseDto;
 import io.aldwindelgado.sourcingvalue.service.datasource.SourcingValue;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.apache.commons.text.StringEscapeUtils;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
@@ -23,11 +22,11 @@ public interface SourcingValueMapper {
     @Named("productConverter")
     static List<String> extractProductName(List<Product> products) {
         return products.stream().map(product -> StringEscapeUtils.unescapeJava(product.getName()))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     default List<SourcingValueResponseDto> toResponseDtos(List<SourcingValue> sourcingValues) {
-        return sourcingValues.stream().map(this::toResponseDto).collect(Collectors.toList());
+        return sourcingValues.stream().map(this::toResponseDto).toList();
     }
 
     @Mapping(target = "products", ignore = true)
